// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the open menu 1`] = `
<nav
  className="sc-chPdSV joRJWR"
>
  <button
    aria-controls="dropdown-menu-user"
    aria-expanded={true}
    aria-haspopup="true"
    className="sc-kgoBCf cQygcs"
    onClick={[Function]}
    type="button"
  >
    fred-astaire
    <svg
      fill="currentColor"
      focusable="false"
      height="1.25em"
      size="1.25em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1.25em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </button>
  <ul
    className="sc-cSHVUG eBHCFa"
    id="dropdown-menu-user"
    role="menu"
  >
    <li
      role="menuitem"
    >
      <button
        className="sc-kAzzGY cbGqLE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="1.25em"
          size="1.25em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        Log out
      </button>
    </li>
  </ul>
</nav>
`;

exports[`renders without crashing 1`] = `
<nav
  className="sc-chPdSV joRJWR"
>
  <button
    aria-controls="dropdown-menu-user"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-kgoBCf cQygcs"
    onClick={[Function]}
    type="button"
  >
    fred-astaire
    <svg
      fill="currentColor"
      focusable="false"
      height="1.25em"
      size="1.25em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1.25em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </button>
</nav>
`;
